# Odysseyplusspluss2.0

Odyssey++_2.0/: CMakeLists.txt  main.cpp  sql_proyecto3.2.sql
Odyssey++_2.0/Huffman/: Huffman.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Odyssey++_2.0/Huffman_Java/: build.xml
Odyssey++_2.0/Huffman_Java/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Odyssey++_2.0/Huffman_Java/nbproject/private/: private.properties  private.xml
Odyssey++_2.0/Huffman_Java/src/huffman_java/: Huffman.form  Huffman.java
Odyssey++_2.0/Odyssey-master/: build.xml  myJson.json  output.xml
Odyssey++_2.0/Odyssey-master/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Odyssey++_2.0/Odyssey-master/nbproject/private/: private.properties  private.xml
Odyssey++_2.0/Odyssey-master/src/XMLconvert/: CompressionUtils.java  JAXBObjectToXml.java  Message.java  SerializeSong.java  Song.java  Track.java  User.java
Odyssey++_2.0/Odyssey-master/src/odyssey/: Huffman.java  Interface.form  Interface.java  Login.form  Login.java  ManagerFriend.form  ManagerFriend.java  Metadata.form  Metadata.java  MetadataMusic.form  MetadataMusic.java  MetadataVideo.form  MetadataVideo.java  Odyssey.java  (+5 more)
Odyssey++_2.0/Odyssey_Server/: Odyssey_Server.pro  huffman.cpp  huffman.h  main.cpp  mysql_calls.cpp  mysql_calls.h  ody_calls.cpp  ody_calls.h  odyssey_s.cpp  odyssey_s.h  odyssey_s.ui  xmlconvert.cpp  xmlconvert.h
Odyssey++_2.0/Odyssey_Server2/: Odyssey_Server.pro  huffman.cpp  huffman.cpp.autosave  huffman.h  huffman.h.autosave  main.cpp  main.cpp.autosave  mysql_calls.cpp  mysql_calls.cpp.autosave  mysql_calls.h  mysql_calls.h.autosave  ody_calls.cpp  ody_calls.h  ody_calls.h.autosave  odyssey_s.cpp  odyssey_s.h  odyssey_s.ui  qspotify.cpp  qspotify.h  raid5.cpp  raid5.h  xmlconvert.cpp  xmlconvert.h  xmlconvert.h.autosave
Odyssey++_2.0/Odyssey_Server_/: Odyssey_Server.pro  main.cpp  mysql_calls.cpp  mysql_calls.h  ody_calls.cpp  ody_calls.h  odyssey_s.cpp  odyssey_s.h
Odyssey++_2.0/Odyssey_reproducer/src/: Reproducer.java
Odyssey++_2.0/sql_test2/: Makefile  main.cpp  mysql_calls.cpp  mysql_calls.h  sql_proyecto3.sql  sql_test2.pro
